# Adafruit_CircuitPython_TMAG5273

./: README.md  README.rst  adafruit_tmag5273.py  pyproject.toml
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: tmag5273_simpletest.py
